created the ota parameters as input to sysparam output

--- a/content/index.html
+++ b/content/index.html
@@ -75,6 +75,19 @@ input[type=submit][disabled] {
             </div>
 
             <input type="submit" id="join" value="Join" disabled />
+
+            <div class="field otarepo" style="display: block;">
+                <label for="otarepo">OTA repository:</label>
+                <input type="text" id="otarepo" name="otarepo" value="HomeACcessoryKid/ota-demo" />
+            </div>
+            <div class="field otavrsn" style="display: block;">
+                <label for="otavrsn">OTA version:</label>
+                <input type="text" id="otavrsn" name="otavrsn" value="0.0.0" />
+            </div>
+            <div class="field otafile" style="display: block;">
+                <label for="otafile">OTA binary file:</label>
+                <input type="text" id="otafile" name="otafile" value="main.bin" />
+            </div>
         </form>
     </div>
     <script>
